--- a/local.yml
+++ b/local.yml
@@ -7,6 +7,6 @@
       changed_when: False
 
   tasks:
-    - include: users.yml
-    - include: cron.yml
-    - include: packages.yml
+    - include: tasks/users.yml
+    - include: tasks/cron.yml
+    - include: tasks/packages.yml
